deployments/epp-node-prototype/epp-image-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epp-image-server
  namespace: epp
  labels:
    app: epp-image-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epp-image-server
  template:
    metadata:
      namespace: epp
      labels:
        app: epp-image-server
    spec:
      containers:
      - name: epp-image-server
        image: ghcr.io/elifesciences/epp-image-server:master-a1362862-20220810.1247 # {"$imagepolicy": "epp:epp-image-server"}
        ports:
        - containerPort: 8182
